<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainLayout"
    tools:context=".ui.CityActivity">

    <TextView
        android:id="@+id/cityText"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/small_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/condIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/condition_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cityText" />

    <TextView
        android:id="@+id/condDescr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/condIcon" />

    <TextView
        android:id="@+id/temp"
        style="@style/tempStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/small_padding"
        app:layout_constraintBaseline_toBaselineOf="@id/condDescr"
        app:layout_constraintLeft_toRightOf="@id/barr1"
        app:layout_constraintTop_toBottomOf="@id/condIcon" />

    <TextView
        android:id="@+id/pressLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/pressure"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp" />

    <TextView
        android:id="@+id/press"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/small_padding"
        app:layout_constraintBaseline_toBaselineOf="@id/pressLab"
        app:layout_constraintLeft_toRightOf="@id/barr1"
        app:layout_constraintTop_toBottomOf="@id/temp" />

    <TextView
        android:id="@+id/humLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/small_padding"
        android:paddingBottom="@dimen/small_padding"
        android:text="@string/humidity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/press" />

    <TextView
        android:id="@+id/hum"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/small_padding"
        app:layout_constraintBaseline_toBaselineOf="@id/humLab"
        app:layout_constraintLeft_toRightOf="@id/barr1"
        app:layout_constraintTop_toBottomOf="@id/press" />

    <TextView
        android:id="@+id/windLab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/small_padding"
        android:text="@string/wind"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hum" />

    <TextView
        android:id="@+id/windSpeed"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/small_padding"
        app:layout_constraintBaseline_toBaselineOf="@id/windLab"
        app:layout_constraintLeft_toRightOf="@id/barr1"
        app:layout_constraintTop_toBottomOf="@id/hum" />

    <TextView
        android:id="@+id/windDeg"
        style="@style/valData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/windLab"
        app:layout_constraintLeft_toRightOf="@id/windSpeed"
        app:layout_constraintTop_toBottomOf="@id/hum" />

    <Button
        android:id="@+id/btnForecast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast"
        android:paddingTop="@dimen/small_padding"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/windLab"
        android:onClick="showForecast"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wf_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:listitem="@layout/wf_recyclerview_item"
        android:padding="@dimen/big_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btnForecast" />

        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:wheel="http://schemas.android.com/apk/res-auto"
        android:id="@+id/progress_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:background="@android:color/black"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="visible"
        />
    </FrameLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="humLab,windLab,condDescr,pressLab"
         />


</androidx.constraintlayout.widget.ConstraintLayout>